# unplayer

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  harbour-unplayer.desktop  unplayer.files  unplayer.includes  wscript
qml/: MediaKeysEmpty.qml  MediaKeysPrivate.qml  main.qml
qml/components/: AboutPage.qml  AddToPlaylistMenuItem.qml  AddToPlaylistPage.qml  AddToQueueMenuItem.qml  AlbumDelegate.qml  AlbumPage.qml  AlbumPageHeader.qml  AlbumTracksSortPage.qml  AlbumsSortPage.qml  AllAlbumsPage.qml  AllTracksSortPage.qml  ArtistPage.qml  ArtistPageHeader.qml  ArtistsPage.qml  AsyncLoadingListView.qml  AuthorsPage.qml  BaseTrackDelegate.qml  BusyPanelBindings.qml  Cover.qml  DirectoriesPage.qml  DonatePage.qml  FilePickerDialog.qml  GenresPage.qml  LibraryDirectoriesPage.qml  LibraryPage.qml  LibraryTrackDelegate.qml  LibraryTracksPullDownMenu.qml  LibraryUpdateLabels.qml  LicensePage.qml  ListViewPlaceholder.qml  MainPage.qml  MainPageListItem.qml  MediaArt.qml  MediaContainerListItem.qml  MediaContainerSelectionDelegate.qml  NewPlaylistDialog.qml  NowPlayingPage.qml  NowPlayingPanel.qml  OpenUrlDialog.qml  ParentDirectoryItem.qml  (+18 more)
qml/components/models/: AlbumsModel.qml  ArtistsModel.qml  PlaylistsModel.qml  TracksProxyModel.qml
qml/cover/: CoverPage.qml
qml/models/: AlbumsModel.qml  ArtistsModel.qml  GenresModel.qml  PlaylistsModel.qml  TracksModel.qml  TracksProxyModel.qml
qml/pages/: AboutPage.qml  AddToPlaylistPage.qml  AlbumPage.qml  AllAlbumsPage.qml  AllArtistsPage.qml  AllTracksPage.qml  ArtistPage.qml  ArtistsPage.qml  DirectoriesPage.qml  GenresPage.qml  LicensePage.qml  MainPage.qml  NewPlaylistDialog.qml  NowPlayingPage.qml  PlaylistPage.qml  PlaylistsPage.qml  QueuePage.qml  SetCoverPage.qml  TrackInfoPage.qml  TracksPage.qml
rpm/: harbour-unplayer.spec  qtdbusextended.patch  qtmpris.patch  taglib.patch
src/: CMakeLists.txt  abstractlibrarymodel.cpp  abstractlibrarymodel.h  albumsmodel.cpp  albumsmodel.h  artistsmodel.cpp  artistsmodel.h  asyncloadingmodel.h  commandlineparser.cpp  commandlineparser.h  databasemodel.cpp  databasemodel.h  dbusservice.cpp  dbusservice.h  directorycontentmodel.cpp  directorycontentmodel.h  directorycontentproxymodel.cpp  directorycontentproxymodel.h  directorytracksmodel.cpp  directorytracksmodel.h  filepickermodel.cpp  filepickermodel.h  fileutils.cpp  fileutils.h  filterproxymodel.cpp  filterproxymodel.h  genresmodel.cpp  genresmodel.h  librarydirectoriesmodel.cpp  librarydirectoriesmodel.h  librarymigrator.cpp  librarymigrator.h  librarytrack.h  librarytracksadder.cpp  librarytracksadder.h  libraryupdaterunnable.cpp  libraryupdaterunnable.h  libraryutils.cpp  libraryutils.h  license.html  (+36 more)
src/folderlistmodel/: fileinfothread.cpp  qquickfolderlistmodel.cpp
translations/: CMakeLists.txt  harbour-unplayer-ar.ts  harbour-unplayer-de.ts  harbour-unplayer-en.ts  harbour-unplayer-es.ts  harbour-unplayer-fr.ts  harbour-unplayer-hr.ts  harbour-unplayer-it.ts  harbour-unplayer-nb.ts  harbour-unplayer-nl.ts  harbour-unplayer-nl_BE.ts  harbour-unplayer-oc.ts  harbour-unplayer-pl.ts  harbour-unplayer-ru.ts  harbour-unplayer-sv.ts  harbour-unplayer-zh_CN.ts  harbour-unplayer-zh_Hant.ts  update.sh
